css/mobile.css
a {
  color: #373737;
}
nav {
  padding-top: 5vh;
}
nav ul {
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style-type: none;
  font-size: 2.5rem;
}
p {
  max-width: 80vw;
}
.popout-hide {
  top: 0;
  right: 0;
  position: absolute;
  width: 0;
  height: 100vh;
  background-color: rgba(211, 211, 211, 0.965);
  transform: translate(50vw);
  transition-duration: 550ms;
}
.popout-hide a {
  display: none;
}
.popout-hide img {
  display: none;
}
.popout-show {
  top: 0;
  right: 0;
  position: absolute;
  background-color: rgba(211, 211, 211, 0.965);
  width: 80vw;
  height: 100vh;
  transition-duration: 550ms;
}
#Band_Logo_Nav {
  width: 5.5rem;
  margin-right: 1%;
  margin-top: 8%;
}
#Hamburger {
  margin-left: 3%;
  width: 40px;
}
#Header {
  height: 70px;
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
}

#Home_Container {
  position: relative; /* Make the container a positioning context */
  padding-top: 75px;
  padding-bottom: 75px;
  background-image: url("../assets/cover_2.jpg"); /* Your image path */
  background-size: cover; /* Cover the entire div */
  background-position: center; /* Center the image */
  background-repeat: no-repeat; /* Prevent the image from repeating */
}

#Home_Container::before {
  content: ""; /* Create an empty pseudo-element */
  position: absolute; /* Position it absolutely within the container */
  top: 0; /* Align to the top */
  left: 0; /* Align to the left */
  right: 0; /* Align to the right */
  bottom: 0; /* Align to the bottom */
  background-color: rgba(0, 0, 0, 0.8); /* Blue overlay with 50% opacity */
  z-index: 1; /* Ensure it sits above the background image */
}

#Home_Container > * {
  position: relative; /* Position child elements above the overlay */
  z-index: 2; /* Ensure child elements are above the overlay */
}
#Marquee {
  animation: move-rtl 17000ms linear infinite;
}
@keyframes move-rtl {
  0% {
    transform: translateX(100vw);
  }
  100% {
    transform: translateX(-1250px);
  }
}
#Nav_Social {
  margin-right: 0.5rem;
  display: flex;
  align-items: center;
  position: relative;
  top: 0;
  right: 0;
}
#Nav_Social a {
  margin: 0;
  padding: 0.35rem;
}
#Tour_List li {
  max-width: 90vw;
}
.nav_social_icons {
  width: 40px;
  height: 60px;
  object-fit: fill;
}
.nav_social_icons-tiktok {
  width: 35px;
  height: 35px;
  object-fit: fill;
}
#Nav_Social_Bottom {
  display: flex;
  align-items: center;
  filter: invert(1);
}
#Logo_Min {
  max-width: 10rem;
}
.gallery img:first-child {
  margin-top: 0;
}
#Video_YouTube {
  width: 80%;
  height: 190px;
  border-radius: 1rem;
  margin-bottom: 12px;
  border: 2.5px solid black;
  /* box-shadow: rgba(0, 0, 0, 0.5) 0 1px 25px 10px;
  border: 7.5px solid transparent; */
}

